# WhoWeAre

./: .gitignore  README.en.md  README.ja.md  README.md
llmkit/: pyproject.toml
llmkit/llmkit/: __init__.py  config.py  providers.py  workspace.py
llmkit/tests/: test_workspace.py
openclaw-whoweare-plugin/: README.md  index.ts  openclaw.plugin.json  package.json
scripts/: deploy-openclaw.sh
whoami/: README.md  USER.md  profile.md  profileforge_plan.md  pyproject.toml
whoami/tests/scrapers/: __init__.py
whoami/whoami/: __init__.py  cli.py  config.py  models.py  router.py  synthesizer.py
whoami/whoami/scrapers/: __init__.py  base.py  bilibili.py  devto.py  douban.py  generic.py  github.py  gitlab.py  medium.py  reddit.py  scholar.py  stackoverflow.py  steam.py  weibo.py  xiaohongshu.py  zhihu.py
whoami/whoami/utils/: http.py  privacy.py
whoareu/: PLAN.md  pyproject.toml
whoareu/tests/: test_cli.py  test_collectors.py  test_output.py  test_schemas.py  test_synthesizer.py
whoareu/whoareu/: __init__.py  cli.py  config.py  models.py  output.py  synthesizer.py
whoareu/whoareu/collectors/: __init__.py  base.py  interactive.py  prompt.py  reference.py  template.py
whoareu/whoareu/schemas/: __init__.py
whoareu/whoareu/templates/: casual.toml  chaotic.toml  minimalist.toml  otaku.toml  professional.toml
