[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llmkit"
version = "0.1.0"
description = "Shared LLM configuration and provider presets for whoweare"
requires-python = ">=3.11"
dependencies = [
    "litellm>=1.40",
    "pydantic>=2.0",
]

[tool.ruff]
target-version = "py311"
