[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "whoami"
version = "0.1.0"
description = "AI-Powered USER.md Generator — scrape public profiles, synthesize with LLM"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "trafilatura>=1.8",
    "scholarly>=1.7",
    "click>=8.1",
    "litellm>=1.40",
    "pydantic>=2.0",
    "llmkit>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "ruff>=0.4",
    "black>=24.0",
]

[project.scripts]
whoami = "whoami.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
