[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "whoareu"
version = "0.1.0"
description = "AI Agent Persona Generator — describe your ideal agent, get SOUL.md + IDENTITY.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "litellm>=1.40",
    "pydantic>=2.0",
    "llmkit>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "ruff>=0.4",
    "black>=24.0",
]

[project.scripts]
whoareu = "whoareu.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
